--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -36,3 +36,11 @@
 [[constraint]]
   name = "github.com/gorilla/csrf"
   version = "1.5.1"
+
+[[constraint]]
+  name = "github.com/satori/go.uuid"
+  version = "1.2.0"
+
+[[constraint]]
+  name = "github.com/mongodb/mongo-go-driver"
+  version = "0.2.0"
